--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -11,40 +11,47 @@
   --primary-color-dark: #0069c0;
   --secondary-color: #263238;
   --secondary-color-light: #e0e0e0;
-  --secondary-color-dark: #000a12; }
-
+  --secondary-color-dark: #000a12;
+}
 /****** Responsive layout and basic page style *******/
+
 body {
   font-family: monospace;
   max-width: 100%;
-  background-color: var(--secondary-color-light); }
+  background-color: var(--secondary-color-light);
+}
 
 .container {
   max-width: 100vw;
   min-height: 100vh;
-  max-height: 100vh; }
+  max-height: 100vh;
+}
 
 header {
   position: fixed;
   z-index: 1;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#2196f3), color-stop(#34a2f7), color-stop(#47aefa), color-stop(#5bbafd), to(#6ec6ff));
-  background-image: linear-gradient(to bottom, #2196f3, #34a2f7, #47aefa, #5bbafd, #6ec6ff); }
+  background-image: linear-gradient(to bottom, #2196f3, #34a2f7, #47aefa, #5bbafd, #6ec6ff);
+}
 
 .page-header {
   font-size: 2em;
   width: 100vw;
   margin: 0;
   text-align: center;
-  color: white; }
-
+  color: white;
+}
 /************************
  Criteria Dropdown Menu
 ************************/
+
 .criteria-list {
-  list-style: none; }
+  list-style: none;
+}
 
 .dropdown {
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .dropdown-button {
   /* height: 100%; */
@@ -53,7 +60,8 @@ header {
   color: var(--secondary-color-dark);
   border: none;
   outline: none;
-  background-color: inherit; }
+  background-color: inherit;
+}
 
 .dropdown-content {
   position: absolute;
@@ -62,66 +70,209 @@ header {
   color: var(--secondary-color-dark);
   background-color: white;
   -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 
 .dropdown-content .dropdown-link {
   display: block;
   float: none;
   text-align: left;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .dropdown-link:hover {
   color: var(--secondary-color-dark);
   background-color: var(--primary-color-light);
-  mix-blend-mode: hard-light; }
-
+  mix-blend-mode: hard-light;
+}
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block; }
 
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 /******************************************************
               Shared Navigation Styles
 ******************************************************/
 /********** Consistent navigation link style *********/
-.top-nav,
-.bottom-nav {
-  font-family: Arial; }
 
-.top-nav .nav-link,
-.dropdown-link {
-  font-size: .95em;
+.bottom-nav,
+.top-nav {
+  font-family: Arial;
+}
+
+.dropdown-link,
+.top-nav .nav-link {
+  font-size: 0.95em;
   float: left;
   /* Keep link close to 48px on mobile view so it's easily tappable */
   padding: 3%;
   text-align: center;
   text-decoration: none;
-  color: var(--secondary-color-dark); }
+  color: var(--secondary-color-dark);
+}
 
-.top-nav .nav-link:hover,
+.bottom-nav .nav-link:hover,
 .dropdown .dropdown-button:hover,
-.bottom-nav .nav-link:hover {
+.top-nav .nav-link:hover {
   color: white;
-  background-color: var(--secondary-color-dark); }
-
+  background-color: var(--secondary-color-dark);
+}
 /***************** Bottom Navigation *****************/
+
 .bottom-nav {
   position: -webkit-sticky;
   position: sticky;
   bottom: 0;
   height: 5vh;
   padding: 1% 0;
-  background-color: var(--primary-color-light); }
+  background-color: var(--primary-color-light);
+}
 
 .bottom-content {
   font-size: 1.95em;
   position: absolute;
   bottom: 0;
-  padding: 1% 5% 0 5%;
-  color: black; }
+  padding: 1% 5% 0;
+  color: black;
+}
 
 .right {
-  right: 0; }
-
+  right: 0;
+}
 /* Hide extra external resources in mobile view due to size constraints */
+
 .visibility {
-  visibility: hidden; }
+  visibility: hidden;
+}
+/******************************************************
+                Criteria resource cards
+******************************************************/
+/**************** Criteria Container *****************/
+
+.criterias {
+  position: relative;
+  /* First criteria card shows up below top navigation section */
+  top: 6vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+
+.criteria-header {
+  font-size: 1.7em;
+  margin: 0;
+  padding: 0.85vh;
+  white-space: pre;
+  color: var(--secondary-color-light);
+  border-radius: 5px 5px 0 0;
+  background-color: var(--primary-color-dark);
+  mix-blend-mode: multiply;
+}
+
+.criteria {
+  margin: 1%;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: white;
+  -webkit-box-shadow: 4px 4px 5px 1px rgba(38, 50, 56, 0.39);
+  box-shadow: 4px 4px 5px 1px rgba(38, 50, 56, 0.39);
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+/* Keep last card from being beneath the bottom nav */
+
+.criteria:last-child {
+  margin-bottom: 5%;
+}
+/****************** Type subsection ******************/
+
+.type-header {
+  font-size: 1.4em;
+  font-weight: 800;
+  margin: 0;
+  opacity: 0.9;
+  color: var(--secondary-color-light);
+  background-color: var(--secondary-color);
+  mix-blend-mode: hard-light;
+}
+/******************* Resource link *******************/
+
+.resource {
+  font-family: Arial;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 1%;
+  padding: 1%;
+  border: 2px groove var(--secondary-color-light);
+  border-radius: 5px;
+  background-color: white;
+  -webkit-box-shadow: 2px 1px 6px var(--secondary-color-light);
+  box-shadow: 2px 1px 6px var(--secondary-color-light);
+}
+
+.resource:hover {
+  background-color: var(--primary-color-light);
+}
+
+.resource-link {
+  text-decoration: none;
+  color: var(--secondary-color-dark);
+}
+/* Keep Shared By on a single line */
+
+.credit {
+  font-size: 0.85em;
+  white-space: nowrap;
+}
+/******************************************************
+                Anchor link positioning
+******************************************************/
+/* Keep clicked link header below the top navigation section */
+
+#ctn0 a,
+#ctn1 a,
+#ctn2 a,
+#ctn3 a,
+#ctn4 a,
+#ctn5 a {
+  position: absolute;
+  top: -70px;
+}
+/*******************************************************************************
+                            Tablet Layout
+*******************************************************************************/
+@media only screen and (min-width: 426px) {
+  .visibility {
+    visibility: visible;
+  }
+
+  .bottom-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-height: 6vh;
+    padding-top: 0;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+  }
+
+  .bottom-content {
+    font-size: 1em;
+    position: relative;
+    text-decoration: none;
+  }
+  /* Increase size of home icon without increasing link font size */
+  .tablet-font {
+    font-size: 2em;
+  }
+
+  .criteria:last-child {
+    margin-bottom: 25%;
+  }
+}
