--- a/css/styles.css
+++ b/css/styles.css
@@ -11,40 +11,52 @@
   --primary-color-dark: #0069c0;
   --secondary-color: #263238;
   --secondary-color-light: #e0e0e0;
-  --secondary-color-dark: #000a12; }
+  --secondary-color-dark: #000a12;
+}
 
 /****** Responsive layout and basic page style *******/
 body {
   font-family: monospace;
   max-width: 100%;
-  background-color: var(--secondary-color-light); }
+  background-color: var(--secondary-color-light);
+}
 
 .container {
   max-width: 100vw;
   min-height: 100vh;
-  max-height: 100vh; }
+  max-height: 100vh;
+}
 
 header {
   position: fixed;
   z-index: 1;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#2196f3), color-stop(#34a2f7), color-stop(#47aefa), color-stop(#5bbafd), to(#6ec6ff));
-  background-image: linear-gradient(to bottom, #2196f3, #34a2f7, #47aefa, #5bbafd, #6ec6ff); }
+  background-image: linear-gradient(to bottom, #2196f3, #34a2f7, #47aefa, #5bbafd, #6ec6ff);
+}
 
 .page-header {
   font-size: 2em;
   width: 100vw;
   margin: 0;
   text-align: center;
-  color: white; }
+  color: white;
+}
 
 /************************
  Criteria Dropdown Menu
 ************************/
 .criteria-list {
-  list-style: none; }
+  list-style: none;
+}
+
+.criteria-link {
+  display: block;
+  height: 0;
+}
 
 .dropdown {
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .dropdown-button {
   /* height: 100%; */
@@ -53,7 +65,8 @@ header {
   color: var(--secondary-color-dark);
   border: none;
   outline: none;
-  background-color: inherit; }
+  background-color: inherit;
+}
 
 .dropdown-content {
   position: absolute;
@@ -62,22 +75,26 @@ header {
   color: var(--secondary-color-dark);
   background-color: white;
   -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 
 .dropdown-content .dropdown-link {
   display: block;
   float: none;
   text-align: left;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .dropdown-link:hover {
   color: var(--secondary-color-dark);
   background-color: var(--primary-color-light);
-  mix-blend-mode: hard-light; }
+  mix-blend-mode: hard-light;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-  display: block; }
+  display: block;
+}
 
 /******************************************************
               Shared Navigation Styles
@@ -85,7 +102,8 @@ header {
 /********** Consistent navigation link style *********/
 .bottom-nav,
 .top-nav {
-  font-family: Arial; }
+  font-family: Arial;
+}
 
 .dropdown-link,
 .top-nav .nav-link {
@@ -95,13 +113,15 @@ header {
   padding: 3%;
   text-align: center;
   text-decoration: none;
-  color: var(--secondary-color-dark); }
+  color: var(--secondary-color-dark);
+}
 
 .bottom-nav .nav-link:hover,
 .dropdown .dropdown-button:hover,
 .top-nav .nav-link:hover {
   color: white;
-  background-color: var(--secondary-color-dark); }
+  background-color: var(--secondary-color-dark);
+}
 
 /***************** Bottom Navigation *****************/
 .bottom-nav {
@@ -110,21 +130,25 @@ header {
   bottom: 0;
   height: 5vh;
   padding: 1% 0;
-  background-color: var(--primary-color-light); }
+  background-color: var(--primary-color-light);
+}
 
 .bottom-content {
   font-size: 1.95em;
   position: absolute;
   bottom: 0;
   padding: 1% 5% 0;
-  color: black; }
+  color: black;
+}
 
 .right {
-  right: 0; }
+  right: 0;
+}
 
 /* Hide extra external resources in mobile view due to size constraints */
 .visibility {
-  visibility: hidden; }
+  visibility: hidden;
+}
 
 /******************************************************
                 Criteria resource cards
@@ -140,7 +164,8 @@ header {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   -ms-flex-pack: distribute;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 .criteria-header {
   font-size: 1.7em;
@@ -150,7 +175,8 @@ header {
   color: var(--secondary-color-light);
   border-radius: 5px 5px 0 0;
   background-color: var(--primary-color-dark);
-  mix-blend-mode: multiply; }
+  mix-blend-mode: multiply;
+}
 
 .criteria {
   margin: 1%;
@@ -161,11 +187,13 @@ header {
   -webkit-box-shadow: 4px 4px 5px 1px rgba(38, 50, 56, 0.39);
   box-shadow: 4px 4px 5px 1px rgba(38, 50, 56, 0.39);
   -ms-flex-item-align: center;
-  align-self: center; }
+  align-self: center;
+}
 
 /* Keep last card from being beneath the bottom nav */
 .criteria:last-child {
-  margin-bottom: 5%; }
+  margin-bottom: 5%;
+}
 
 /****************** Type subsection ******************/
 .type-header {
@@ -175,7 +203,8 @@ header {
   opacity: 0.9;
   color: var(--secondary-color-light);
   background-color: var(--secondary-color);
-  mix-blend-mode: hard-light; }
+  mix-blend-mode: hard-light;
+}
 
 /******************* Resource link *******************/
 .resource {
@@ -189,19 +218,23 @@ header {
   border-radius: 5px;
   background-color: white;
   -webkit-box-shadow: 2px 1px 6px var(--secondary-color-light);
-  box-shadow: 2px 1px 6px var(--secondary-color-light); }
+  box-shadow: 2px 1px 6px var(--secondary-color-light);
+}
 
 .resource:hover {
-  background-color: var(--primary-color-light); }
+  background-color: var(--primary-color-light);
+}
 
 .resource-link {
   text-decoration: none;
-  color: var(--secondary-color-dark); }
+  color: var(--secondary-color-dark);
+}
 
 /* Keep Shared By on a single line */
 .credit {
   font-size: 0.85em;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
 
 /******************************************************
                 Anchor link positioning
@@ -214,14 +247,17 @@ header {
 #ctn4 a,
 #ctn5 a {
   position: absolute;
-  top: -70px; }
+  top: -70px;
+}
 
 /*******************************************************************************
                             Tablet Layout
 *******************************************************************************/
 @media only screen and (min-width: 426px) {
   .visibility {
-    visibility: visible; }
+    visibility: visible;
+  }
+
   .bottom-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -229,13 +265,21 @@ header {
     max-height: 6vh;
     padding-top: 0;
     -ms-flex-pack: distribute;
-    justify-content: space-around; }
+    justify-content: space-around;
+  }
+
   .bottom-content {
     font-size: 1em;
     position: relative;
-    text-decoration: none; }
+    text-decoration: none;
+  }
+
   /* Increase size of home icon without increasing link font size */
   .tablet-font {
-    font-size: 2em; }
+    font-size: 2em;
+  }
+
   .criteria:last-child {
-    margin-bottom: 25%; } }
+    margin-bottom: 25%;
+  }
+}
